Bug 1689433. Remove ineffective D3D11 ANGLE blocklist entry. r=jgilbert

D3D11 was made the default in Firefox 60 through:
https://hg.mozilla.org/mozilla-central/rev/8ee92682ad1f#l490.39
and so we've been using D3D11 on this hardware since then.

This has the added advantage of allowing hardware WebRender to run
on these devices and fixing h264 video with SW-WR.

Differential Revision: https://phabricator.services.mozilla.com/D106856